--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<nav class="w-64 bg-gray-800 text-white h-full p-4 space-y-4">
+<nav class="w-64 bg-green-500 text-white h-full p-4 space-y-4">
   <a routerLink="/dashboard" routerLinkActive="font-bold" class="block hover:text-blue-300">Dashboard</a>
   <a routerLink="/etablissements" routerLinkActive="font-bold" class="block hover:text-blue-300">Etablissements</a>
   <a routerLink="/personnes" routerLinkActive="font-bold" class="block hover:text-blue-300">Personnes</a>
