--- a/src/app/pages/personne/personne.component.html
+++ b/src/app/pages/personne/personne.component.html
@@ -17,7 +17,7 @@
         <button class="close-btn" (click)="showModal = false">&times;</button>
       </div>
       <div class="modal-content">
-        <form class="personne-form" (ngSubmit)="savePersonne()">
+        <form class="personne-form" (ngSubmit)="onSubmit()">
 
           <!-- Personne -->
           <div class="form-group">
