--- a/src/app/pages/personne/personne.component.html
+++ b/src/app/pages/personne/personne.component.html
@@ -46,11 +46,6 @@
           </div>
 
           <div class="form-group">
-            <label><i class="fas fa-hospital"></i> Établissement</label>
-            <input type="text" [(ngModel)]="etablissement.nom" name="etabNom" required placeholder="Nom de l'établissement" />
-          </div>
-
-          <div class="form-group">
             <label><i class="fas fa-map-marker-alt"></i> Région</label>
             <select [(ngModel)]="selectedRegion" (change)="onRegionChange()" name="region" required>
               <option value="">Sélectionnez la région</option>
@@ -62,7 +57,7 @@
             <label><i class="fas fa-map"></i> District</label>
             <select [(ngModel)]="selectedDistrict" (change)="onDistrictChange()" name="district" required>
               <option value="">Sélectionnez le district</option>
-              <option *ngFor="let d of selectedRegion?.districts" [ngValue]="d">{{ d.nom }}</option>
+              <option *ngFor="let district of getDistricts()" [ngValue]="district">{{ district.nom }}</option>
             </select>
           </div>
 
@@ -70,8 +65,13 @@
             <label><i class="fas fa-building"></i> Commune</label>
             <select [(ngModel)]="selectedCommune" name="commune" required>
               <option value="">Sélectionnez la commune</option>
-              <option *ngFor="let c of selectedDistrict?.communes" [value]="c">{{ c }}</option>
+              <option *ngFor="let commune of getCommunes()" [value]="commune">{{ commune }}</option>
             </select>
+          </div>
+
+          <div class="form-group">
+            <label><i class="fas fa-hospital"></i> Établissement</label>
+            <input type="text" [(ngModel)]="etablissement.nom" name="etabNom" required placeholder="Nom de l'établissement" />
           </div>
 
           <div class="form-actions">
